# universally-hashable

./: CHANGELOG.md  universally-hashable.cabal
src/Data/Hashable/: Universally.hs
