cabal-version: 2.2
name: universally-hashable
version: 0.1.0.0
synopsis: Universal hashing
-- description:
homepage: https://github.com/andrewthad/universally-hashable
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
-- copyright:
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules: Data.Hashable.Universally
  -- other-modules:
  -- other-extensions:
  build-depends:
    , base >=4.11 && <4.12
    , primitive >= 0.6.4
  hs-source-dirs: src
  default-language: Haskell2010
